# cc-pos

./: .gitignore  API_ALIGNMENT_REPORT.md  API_ANALYSIS.md  API_ENDPOINTS_COMPARISON.md  COMPREHENSIVE_SYSTEM_ANALYSIS.md  WAITER_UI_IMPLEMENTATION.md  connection_test_server.py  test_connection.html
backend/: README.md  SEED_GUIDE.md  alembic.ini  cc_pos.db  pyproject.toml  seed_db.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: base.py  dependencies.py  seed.py  sqlite_seed.py
backend/app/models/: __init__.py  actor_session.py  audit_event.py  bill_adjustment.py  menu_item.py  order.py  order_item.py  order_item_print_event.py  order_item_serving.py  physical_table.py  table_group.py  user.py  user_session.py  waiter.py
backend/app/printing/: __init__.py  adapter.py  noop.py  service.py
backend/app/repositories/: __init__.py  actor_session_repo.py  audit_event_repo.py  billing_repo.py  menu_item_repo.py  order_item_repo.py  order_repo.py  physical_table_repo.py  session_repo.py  user_repo.py  (+2 more)
backend/cc_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_tables.py  seed_users.py
backend/tests/: conftest.py  test_actor_sessions_api.py  test_audit_events_api.py  test_auth_api.py  test_billing_api.py  test_billing_operations.py  test_menu_item_api.py  test_menu_item_operations.py  test_order_api.py  test_order_item_api.py  test_order_item_operations.py  test_order_operations.py  test_printing_adapter.py  test_table_group_api.py  test_table_group_operations.py  test_waiter_api.py
(+109 files in other folders)
