[project]
name = "cc-backend"
version = "0.1.0"
description = "Backend service for the restaurant POS"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "pydantic-settings>=2.1",
  "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.uv]
package = false
